--- a/pom.xml
+++ b/pom.xml
@@ -44,5 +44,11 @@
             <version>2.8.5</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.4</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
