--- a/pom.xml
+++ b/pom.xml
@@ -51,4 +51,14 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+    <distributionManagement>
+        <repository>
+          <id>${project.artifactId}</id>
+          <url>${env.CI_API_V4_URL}/projects/${env.CI_PROJECT_ID}/packages/maven</url>
+        </repository>
+        <snapshotRepository>
+          <id>${project.artifactId}</id>
+          <url>${env.CI_API_V4_URL}/projects/${env.CI_PROJECT_ID}/packages/maven</url>
+        </snapshotRepository>
+      </distributionManagement>
 </project>
