rename the origin main branch in the gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,6 @@ deploy:
   <<: *tags
   stage: deploy
   only:
-    - master
+    - main
   script:
     - mvn $MAVEN_CLI_OPTS -DskipTests -s ci_settings.xml deploy
