--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <version>2.8.0</version>
         </dependency>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
@@ -49,6 +55,11 @@
             <artifactId>httpclient</artifactId>
             <version>4.4</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-client</artifactId>
+            <version>3.0.15</version>
         </dependency>
     </dependencies>
     <distributionManagement>
